/**
    Copyright 2018 BarD Software s.r.o

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
    http://www.apache.org/licenses/LICENSE-2.0
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

    Author: Mikhail Shavkunov (@shavkunov)
 */
syntax = "proto3";

option java_package = "com.bardsoftware.backend.fleet.rmarkdown";
option java_outer_classname = "CompilerFleet";

enum Engine {
    PDFLATEX = 0;
    XELATEX = 1;
    LUALATEX = 2;
}

enum Compiler {
    MOCK = 0;
    MARKDOWN = 1;
    MD_TEX_CONVERTER = 2;
}

message CompilerFleetRequest {
    string taskId = 1;
    bytes zipBytes = 2;
    string rootFileName = 3;
    Engine engine = 4;
    Compiler compiler = 5;
}

message CompilerFleetResult {
    string taskId = 1;
    bytes resultBytes = 2;
    string rootFileName = 3;
    int32 statusCode = 4;
}